--- a/package.json
+++ b/package.json
@@ -4,5 +4,21 @@
   "main": "dist/index.js",
   "repository": "https://github.com/Mossop/mdn-archive.git",
   "author": "Dave Townsend <dtownsend@oxymoronical.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "scripts": {
+    "build": "tsc -b tsconfig.build.json",
+    "eslint": "eslint .",
+    "prettier": "prettier --write ."
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^4.29.1",
+    "@typescript-eslint/parser": "^4.29.1",
+    "prettier": "^2.3.2",
+    "typescript": "^4.3.5",
+    "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-import-resolver-typescript": "^2.4.0",
+    "eslint-plugin-import": "^2.24.0",
+    "eslint-plugin-mossop": "github:Mossop/eslint-plugin-mossop#1.0.13"
+  }
 }
