--- a/package.json
+++ b/package.json
@@ -8,17 +8,22 @@
   "scripts": {
     "build": "tsc -b tsconfig.build.json",
     "eslint": "eslint .",
-    "prettier": "prettier --write ."
+    "prettier": "prettier --write .",
+    "start": "node dist"
   },
   "devDependencies": {
+    "@types/koa": "^2.13.4",
     "@typescript-eslint/eslint-plugin": "^4.29.1",
     "@typescript-eslint/parser": "^4.29.1",
-    "prettier": "^2.3.2",
-    "typescript": "^4.3.5",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-import-resolver-typescript": "^2.4.0",
     "eslint-plugin-import": "^2.24.0",
-    "eslint-plugin-mossop": "github:Mossop/eslint-plugin-mossop#1.0.13"
+    "eslint-plugin-mossop": "github:Mossop/eslint-plugin-mossop#1.0.13",
+    "prettier": "^2.3.2",
+    "typescript": "^4.3.5"
+  },
+  "dependencies": {
+    "koa": "^2.13.1"
   }
 }
