--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "devDependencies": {
     "@types/koa": "^2.13.4",
+    "@types/yaml": "^1.9.7",
     "@typescript-eslint/eslint-plugin": "^4.29.1",
     "@typescript-eslint/parser": "^4.29.1",
     "eslint": "^7.32.0",
@@ -24,6 +25,9 @@
     "typescript": "^4.3.5"
   },
   "dependencies": {
-    "koa": "^2.13.1"
+    "handlebars": "^4.7.7",
+    "koa": "^2.13.1",
+    "ts.data.json": "^2.0.0",
+    "yaml": "^1.10.2"
   }
 }
